--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saldo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: #f0f0f0;
+        }
+        .container {
+            max-width: 400px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .label {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .value {
+            font-size: 48px;
+            font-weight: bold;
+            color: #007bff;
+            margin-bottom: 10px;
+        }
+        .updated {
+            font-size: 18px;
+            color: gray;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="label">Saldo</div>
+        <div class="value" id="balance">Loading...</div>
+        <div class="updated" id="updated">Updaterad: Loading...</div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script>
+        fetch('data.csv')
+            .then(response => response.text())
+            .then(data => {
+                const workbook = XLSX.read(data, {type: 'string'});
+                const sheetName = workbook.SheetNames[0];
+                const sheet = workbook.Sheets[sheetName];
+                // Assume first row: balance, second row: updated
+                const rows = XLSX.utils.sheet_to_json(sheet, {header: 1});
+                const balance = rows[0][0];
+                const updated = rows[1][0];
+                document.getElementById('balance').textContent = balance + ' kr';
+                document.getElementById('updated').textContent = 'Updaterad: ' + updated;
+            })
+            .catch(error => {
+                console.error('Error loading CSV:', error);
+                document.getElementById('balance').textContent = 'Error loading data';
+                document.getElementById('updated').textContent = 'Error';
+            });
+    </script>
+</body>
+</html>
