--- a/index.html
+++ b/index.html
@@ -12,26 +12,6 @@
         <div class="value" id="balance">Loading...</div>
         <div class="updated" id="updated">Updaterad: Loading...</div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script>
-        fetch('data.csv')
-            .then(response => response.text())
-            .then(data => {
-                const workbook = XLSX.read(data, {type: 'string'});
-                const sheetName = workbook.SheetNames[0];
-                const sheet = workbook.Sheets[sheetName];
-                // Assume first row: balance, second row: updated
-                const rows = XLSX.utils.sheet_to_json(sheet, {header: 1});
-                const balance = rows[0][0];
-                const updated = rows[1][0];
-                document.getElementById('balance').textContent = balance + ' kr';
-                document.getElementById('updated').textContent = 'Updaterad: ' + updated;
-            })
-            .catch(error => {
-                console.error('Error loading CSV:', error);
-                document.getElementById('balance').textContent = 'Error loading data';
-                document.getElementById('updated').textContent = 'Error';
-            });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
