--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="value" id="balance">Loading...</div>
         <div class="updated" id="updated">Updaterad: Loading...</div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
