--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script type="module" src="script.js"></script>
     <div class="container">
         <div class="label">Aktuellt Saldo</div>
         <div class="value" id="balance">Loading...</div>
@@ -26,6 +27,5 @@
             <div id="entriesList"></div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
