--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <script type="module" src="script.js"></script>
+    <div id="splash">
+        <img src="images/web-app-manifest-512x512.png" alt="Loading">
+    </div>
     <div class="container">
         <div class="label">Aktuellt Saldo</div>
         <div class="value" id="balance">Loading...</div>
