test open swish app

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Saldo</title>
+    <title>BΩNG house - Saldo</title>
     <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="shortcut icon" href="/images/favicon.ico" />
@@ -35,12 +35,12 @@
         </section>
 
         <!-- TAB: SKULDER -->
-        <!-- <section class="tab" id="tab-debts">
+        <section class="tab" id="tab-debts">
             <div class="debts-section">
                 <h3>Skulder till kontot</h3>
                 <div id="debtsSummary">Loading...</div>
             </div>
-        </section> -->
+        </section>
 
         <!-- TAB: LÄGG TILL -->
         <section class="tab" id="tab-add">
@@ -67,7 +67,7 @@
         </section>
     </div>
     <nav class="bottom-nav">
-        <!-- <button class="nav-btn" data-tab="debts">Sug mig</button> -->
+        <!-- <a href="swish.html" class="nav-btn" data-tab="debts">Sug mig</a> -->
         <button class="nav-btn active" data-tab="saldo">Saldo</button>
         <button class="nav-btn" data-tab="add">Lägg till</button>
     </nav>
