--- a/swish.html
+++ b/swish.html
@@ -9,7 +9,7 @@
     <script type="module" src="swish.js"></script>
     <div class="container">
         <!-- open the swish app: -->
-        <button id="openSwish">ÖPPNA SWISH</button> 
+        <button id="openSwish" class="btn">ÖPPNA SWISH</button> 
     </div>
 </body>
 </html>
