--- a/swish.html
+++ b/swish.html
@@ -10,6 +10,7 @@
     <div class="container">
         <!-- open the swish app: -->
         <button id="openSwish" class="btn">ÖPPNA SWISH</button> 
+        <p>should work</p>
     </div>
 </body>
 </html>
