--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </section>
     </div>
     <nav class="bottom-nav">
-        <button class="nav-btn" data-tab="debts">Lägg till</button>
+        <button class="nav-btn" data-tab="debts">Skulder</button>
         <button class="nav-btn active" data-tab="saldo">Saldo</button>
         <button class="nav-btn" data-tab="add">Lägg till</button>
     </nav>
