--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                     <input type="number" id="debtAmount" placeholder="Belopp" step="0.01" min="0" required>
 
-                    <button type="button" id="addDebtBtn">Lägg till skuld</button>
+                    <button type="submit" id="addDebtBtn">Lägg till skuld</button>
                 </form>
             </div>
         </section>
