Start message handling

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     </select>
 
                     <input type="number" id="debtAmount" placeholder="Belopp" step="0.01" min="0" required>
+                    <input type="text" id="debtMessage" placeholder="Vad köpte du?" required>
 
                     <button type="submit" id="addDebtBtn">Lägg till skuld</button>
                 </form>
